fix spacing

--- a/src/components/Logo/logo.scss
+++ b/src/components/Logo/logo.scss
@@ -4,11 +4,13 @@
   color: colors.$primary;
   font-weight: 400;
   
-  padding: 13px 32px;
-  font-size: 40px;
+  font-size: 24px;
   line-height: 80px;
   font-family: 'Birthstone Bounce';
   font-weight: 400;
   margin: 0;
-  padding: 0 32px;
+  padding: 0 32px 0 0;
+  @media screen and (min-width: 400px) {
+    font-size: 40px;
+  }
 }
