--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -4,7 +4,7 @@ nav {
   color: #ffffff;
   display: flex;
   align-items: center;
-  gap: 32px;
+  gap: 16px;
   padding: 16px 24px;
 }
 
